test/files/pos/parallel-classloader.scala
class Loader extends ClassLoader {
  ClassLoader.registerAsParallelCapable()
}