test/files/neg/t7386/MyScalaClass.scala
class MyScalaClass {
  MyClassBase.myStaticBaseMethod() //compiles
  MyClass.myStaticBaseMethod() //no compiles. Wrong!!!
}
